--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.3",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "sequelize": "^6.37.6"
   }
